# qcentroid-agent-cli

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  python.yml
qcentroid_agent_cli/: QCentroidAgentClient.py  QCentroidSolverClient.py  __init__.py
src/qcentroid_agent_cli/: QcentroidAgentClient.py
src/qcentroid_agent_cli/model/: StatusEntity.py
tests/: test_QCentroidSolverClient.py
